--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
       <nav>
         <ul class="nav-links" id="navLinks">
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#success">Success Rate</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <a href="#about"> <li>About</li></a>
+          <a href="#services"> <li>Services</li></a>
+          <a href="#success"> <li>Success Rate</li></a>
+          <a href="#contact"> <li>Contact</li></a>
         </ul>
       </nav>
     </header>
