--- a/index.html
+++ b/index.html
@@ -53,9 +53,24 @@
 
     <section class="hero">
       <div class="hero-content">
-        <h1>Achieve Your Study Abroad Dream</h1>
-        <p>Leading Education Consultancy in Lamahi, Dang</p>
-        <a href="#contact" class="btn">Get in Touch</a>
+        <h1>
+          Are you dreaming of studying in
+          <span class="word-slider">
+            <span class="word-list" style="color: black">
+              <span>Australia</span>
+              <span>Canada</span>
+              <span>UK</span>
+              <span>USA</span>
+              <span>Japan</span>
+              <span>Denmark</span>
+              <span>South Korea</span>
+              <span>France</span>
+              <span>Germany</span>
+              <span>Australia</span>
+              <!-- for smooth loop -->
+            </span>
+          </span>
+        </h1>
       </div>
     </section>
 
