our services have been done

--- a/index.html
+++ b/index.html
@@ -83,25 +83,26 @@
         brighter future.
       </p>
     </section>
-
-    <section id="services" class="section reveal">
+    <section id="services" class="section">
       <h2>Our Services</h2>
-      <div class="cards">
-        <div class="card">
-          <h3>Study Abroad Counseling</h3>
-          <p>Personalized guidance for your academic goals.</p>
-        </div>
-        <div class="card">
-          <h3>Test Preparation</h3>
-          <p>IELTS, TOEFL, PTE coaching with expert trainers.</p>
-        </div>
-        <div class="card">
-          <h3>University Applications</h3>
-          <p>We help you apply to top-ranked universities worldwide.</p>
-        </div>
-        <div class="card">
-          <h3>Visa Assistance</h3>
-          <p>From documentation to interview prep – we’ve got you covered.</p>
+      <div class="cards-wrapper">
+        <div class="cards">
+          <div class="card">
+            <h3>Study Abroad Counseling</h3>
+            <p>Personalized guidance for your academic goals.</p>
+          </div>
+          <div class="card">
+            <h3>Test Preparation</h3>
+            <p>IELTS, TOEFL, PTE coaching with expert trainers.</p>
+          </div>
+          <div class="card">
+            <h3>University Applications</h3>
+            <p>We help you apply to top-ranked universities worldwide.</p>
+          </div>
+          <div class="card">
+            <h3>Visa Assistance</h3>
+            <p>From documentation to interview prep – we’ve got you covered.</p>
+          </div>
         </div>
       </div>
     </section>
@@ -164,5 +165,7 @@
       <p>&copy; 2025 Next Education Foundation | Lamahi, Dang, Nepal</p>
     </footer>
     <script src="./components/hamburger/hamburger.js"></script>
+    <!-- Carousel  -->
+    <script src="./carousel.js"></script>
   </body>
 </html>
