our visa success rate almost done

--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
         </h1>
       </div>
     </section>
-
+    <br />
     <section id="about" class="section reveal">
-      <h2>About Us</h2>
       <p>
         We provide expert counseling and visa services for students looking to
         study in Australia, Canada, the UK, and beyond. With high visa success
@@ -107,19 +106,21 @@
       </div>
     </section>
 
+    <!-- Heading Outside the Image -->
+    <h2 class="section-title">Our Visa Success Rate</h2>
+
     <section id="success" class="section reveal">
-      <h2>Our Visa Success Rate</h2>
       <div class="success-stats">
-        <div class="stat">
-          <h3>95%+</h3>
+        <div class="stat glass-card">
+          <h3 data-target="95">0+</h3>
           <p>Visa Approval Rate</p>
         </div>
-        <div class="stat">
-          <h3>500+</h3>
+        <div class="stat glass-card">
+          <h3 data-target="500">0+</h3>
           <p>Students Successfully Placed</p>
         </div>
-        <div class="stat">
-          <h3>10+</h3>
+        <div class="stat glass-card">
+          <h3 data-target="10">0+</h3>
           <p>Years of Experience</p>
         </div>
       </div>
@@ -167,5 +168,8 @@
     <script src="./components/hamburger/hamburger.js"></script>
     <!-- Carousel  -->
     <script src="./carousel.js"></script>
+
+    <!-- Number increasing  -->
+    <script src="./number.js"></script>
   </body>
 </html>
