--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             </span>
           </span>
         </h1>
+        <br /><br />
+        <div id="motto">
+          Join the <span id="next">Next</span>, get the best!
+        </div>
       </div>
     </section>
     <br />
