--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- css  -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./components/hamburger/hamburger.css" />
+
+    <!-- Custom popup Css  -->
+    <link rel="stylesheet" href="./custom_popup.css" />
     <script defer src="script.js"></script>
   </head>
   <body>
@@ -130,12 +133,37 @@
       </div>
     </section>
 
+    <!-- Button to Open Popup -->
+    <!-- <button onclick="openPopup()">Open Custom Popup</button> -->
+    <!-- Popup Overlay -->
+    <div id="popup-overlay" class="popup-overlay"></div>
+
+    <!-- Popup Box -->
+    <div id="popup-box" class="popup-box" style="color: black">
+      <h2 id="popupTopic"></h2>
+
+      <p id="popupSubTopic"></p>
+      <br />
+      <button class="close-btn" id="close-btn" onclick="closePopup()"></button>
+    </div>
+
     <section id="contact" class="section reveal contact-section">
       <h2 class="contact-heading">Contact Us</h2>
       <!-- OUTSIDE THE GLASS FORM -->
 
       <div class="contact-form-wrapper">
-        <form id="contactForm">
+        <form
+          id="contactForm"
+          action="https://api.web3forms.com/submit"
+          method="POST"
+        >
+          <!-- Replace with your Access Key -->
+          <input
+            type="hidden"
+            name="access_key"
+            value="f6aceb8a-fc6a-4c1d-b1c5-bd2f95429e54"
+          />
+
           <input
             type="text"
             id="name"
@@ -156,7 +184,19 @@
             placeholder="Your Message"
             required
           ></textarea>
-          <button type="submit">Send via WhatsApp</button>
+
+          <!-- Honeypot Spam Protection -->
+          <input
+            type="checkbox"
+            name="botcheck"
+            class="hidden"
+            style="display: none"
+          />
+
+          <!-- Custom Confirmation / Success Page -->
+          <!-- <input type="hidden" name="redirect" value="https://mywebsite.com/thanks.html"> -->
+
+          <button id="sendButton" type="submit">Send</button>
         </form>
       </div>
     </section>
@@ -211,5 +251,84 @@
 
     <!-- Contact  -->
     <script src="./contact.js"></script>
+
+    <!-- POPUP  -->
+    <!-- animate on scroll  -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!-- form submission  -->
+    <script>
+      async function handleFormSubmit(event) {
+        event.preventDefault(); // Prevent the default form submission
+        var isLoading = true;
+        var sendButton = document.getElementById("sendButton");
+        sendButton.innerHTML = "Sending ...";
+        sendButton.style = "background-color: rgb(233, 233, 7);color:black;";
+
+        const form = event.target;
+        const formData = new FormData(form);
+
+        try {
+          const response = await fetch("https://api.web3forms.com/submit", {
+            method: "POST",
+            body: formData,
+          });
+
+          if (response.ok) {
+            // alert("Form submitted successfully!");
+
+            openPopup(
+              "Success",
+              "Form has been submitted successfully",
+              "Close"
+            );
+            form.reset(); // Reset the form fields
+          } else {
+            openPopup("Error", "There was an error submitting the form.");
+          }
+        } catch (error) {
+          openPopup(
+            "Error",
+            "There was an error submitting the form: " + error
+          );
+
+          console.error("Error:", error);
+        }
+        sendButton.innerHTML = "Send";
+        sendButton.style = "background-color:#007bff;";
+      }
+    </script>
+
+    <!-- Custom popup script -->
+    <script>
+      // Function to open the popup
+      function openPopup(topic, subtopic, btn) {
+        document.getElementById("popupTopic").innerText = topic;
+        document.getElementById("popupSubTopic").innerText = subtopic;
+        document.getElementById("close-btn").innerText = btn;
+        document.getElementById("popup-overlay").style =
+          "display:block;color:black;";
+        document.getElementById("popup-box").style =
+          "display:block;color:black;";
+        return true;
+      }
+
+      // Function to close the popup
+      function closePopup() {
+        document.getElementById("popup-overlay").style.display = "none";
+        document.getElementById("popup-box").style.display = "none";
+      }
+      // Close the popup if the overlay (outside the box) is clicked
+      document
+        .getElementById("popup-overlay")
+        .addEventListener("click", function (event) {
+          if (event.target === document.getElementById("popup-overlay")) {
+            closePopup();
+          }
+        });
+    </script>
   </body>
 </html>
