name changed to NEF Dang

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="company">
         <div id="logoandName">
           <image src="./assets/images/circle_logo.png"></image>
-          <div class="name">NefDang</div>
+          <div class="name">NEF Dang</div>
         </div>
         <div>
           <!-- From Uiverse.io by JulanDeAlb -->
