--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     </section>
 
     <section id="social-media" class="section social-media-section">
-      <h2>Connect with Us</h2>
+      <h2>Follow us on Socials</h2>
       <div class="social-icons">
         <a
           href="https://www.facebook.com/yourpage"
@@ -236,7 +236,14 @@
     </section>
 
     <footer class="footer">
-      <p>&copy; 2025 Next Education Foundation | Lamahi, Dang, Nepal</p>
+      <p>
+        &copy; 2025 Next Education Foundation Dang | Lamahi-06 Dang, Nepal
+        <br />| Developer:
+        <a href="https://sureshyadav.info.np" target="_blank" id="developerLink"
+          >Suresh Yadav</a
+        >
+        |
+      </p>
     </footer>
     <script src="./components/hamburger/hamburger.js"></script>
     <!-- Carousel  -->
