--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
           Join the <span id="next">Next</span>, get the best!
         </div>
       </div>
+      <div class="marquee">
+        <div class="marquee-content">
+          PTE &nbsp;|&nbsp; ITELTS &nbsp; | &nbsp;JAPANESE &nbsp;| &nbsp;ENGLISH
+          &nbsp;| &nbsp;INTERVIEW PREPARATION &nbsp;|
+        </div>
+      </div>
     </section>
     <br />
     <section id="about" class="section reveal">
