success stories carousel added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
     <!-- Custom popup Css  -->
     <link rel="stylesheet" href="./custom_popup.css" />
+
+    <!-- Visa Carousel  -->
+    <link rel="stylesheet" href="./visas_carousel/visa_carousel.css" />
     <script defer src="script.js"></script>
   </head>
   <body>
@@ -135,6 +138,18 @@
         <div class="stat glass-card">
           <h3 data-target="10">0+</h3>
           <p>Years of Experience</p>
+        </div>
+      </div>
+    </section>
+    <br />
+
+    <section class="carousel-section">
+      <h2 style="margin-left: 0.6rem; padding-bottom: 0.6rem">
+        Success Stories
+      </h2>
+      <div class="carousel-wrapper">
+        <div class="carousel-track" id="carousel-track">
+          <!-- Cards will be dynamically inserted here -->
         </div>
       </div>
     </section>
@@ -339,5 +354,8 @@
           }
         });
     </script>
+
+    <!-- Visa Carousel  -->
+    <script src="./visas_carousel/visa_carousel.js"></script>
   </body>
 </html>
